# MPK_KRAKOW

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  README_EN.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/api/: cache.py  constants.py  db.py  exceptions.py  main.py  middleware.py  openapi.py  repository.py  response.py  schemas.py  schemas_docs.py  service.py  stats.py  validation.py
app/api/controllers/: health_controller.py  shapes_controller.py  stats_controller.py  trips_controller.py  vehicles_controller.py
app/api/repositories/: stats_repository.py  vehicles_repository.py
app/api/services/: shapes_service.py  stats_service.py  trips_service.py  vehicles_service.py
app/collector/: requirements.txt
app/collector/collector/: build.py  fetch.py  main.py  parse.py  settings.py  static_lookup.py  timecalc.py  writer.py
app/common/: config.py  constants.py  exceptions.py  feeds.py  logging.py  retry.py  sentry.py
app/common/app_common/: config.py
app/common/app_common/db/: models.py  session.py
app/common/app_common/gtfs/: hashing.py  timeparse.py
app/common/db/: connection.py  models.py
app/common/db/repositories/: gtfs_meta.py  gtfs_static.py  stop_event.py
app/common/gtfs/: hashing.py  parser.py  readiness.py  timeparse.py
app/common/models/: enums.py  events.py  feeds.py  gtfs_realtime.py  gtfs_static.py
app/common/redis/: connection.py  schemas.py  serializer.py
app/common/redis/repositories/: live_vehicles.py  saved_sequences.py  trip_updates.py  vehicle_state.py
app/importer/: download.py  load.py  main.py
app/importer/importer/: archive.py  download.py  extract.py  load.py  main.py  meta.py
app/rt_poller/: circuit_breaker.py  fetcher.py  main.py  publisher.py
app/shared/: constants.py
app/shared/gtfs/: reload_marker.py
app/stop_writer/: detector.py  main.py  subscriber.py  writer.py
app/stop_writer/detector/: __init__.py  event_factory.py  gtfs_cache.py  orchestrator.py  validation.py
app/stop_writer/detector/strategies/: base.py  seq_jump.py  stopped_at.py  trip_completion.py
app/weather_collector/: fetcher.py  main.py  repository.py
docker/: Caddyfile  Dockerfile.api  Dockerfile.collector  Dockerfile.importer  Dockerfile.migrator  Dockerfile.rt_poller  Dockerfile.stop_writer  Dockerfile.weather_collector  docker-compose.yml  init-db.sh
migrations/: env.py
migrations/versions/: 0254a10dc1e4_init_schema.py  2c1e7e354ac4_add_shape_id_index.py  4a8b9c2d3e1f_add_gtfs_static_and_events_schemas.py  531bc22daafa_add_max_stop_sequence.py  58d205a207fd_add_weather_schema.py  86828ea9a33c_add_stop_events_view.py  e5f6a7b8c9d0_reset_db_permissions.py  ee27c44c9359_add_stats_covering_index.py
scripts/: local.sh
tests/: conftest.py
tests/api/: test_validation.py
tests/common/: test_retry.py
tests/common/gtfs/: test_hashing.py  test_reload_marker.py  test_timeparse.py
tests/stop_writer/: conftest.py  test_detector.py  test_event_validation.py  test_writer.py
