[build-system]
requires = ["setuptools>=76.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpk-krakow"
version = "0.1.0"
description = "MPK Krakow data"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3",
    "redis>=6.0",
    "requests>=2.31",
    "protobuf>=6.31",
    "gtfs-realtime-bindings>=2.0",
    "alembic>=1.16",
    "msgspec>=0.19.0",
    "fastapi>=0.128.6",
    "uvicorn[standard]>=0.40.0",
    "cachetools>=7.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.13",
    "mypy>=1.18",
    "pre-commit>=4.0",
    "types-requests>=2.32",
    "types-cachetools>=5.3.0.7"
]

[tool.ruff]
line-length = 120
target-version = "py313"

exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
    "tests"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["migrations", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[[tool.mypy.overrides]]
module = [
    "gtfs_realtime_bindings.*",
    "google.transit.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
