[build-system]
requires = ["setuptools>=76.0"]
build-backend = "setuptools.build_meta"

[project]
name = "krk-transit-stats"
version = "1.0.0"
description = "KRKtransit - Kraków public transport delay statistics & live map"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3",
]

[project.optional-dependencies]
api = [
    "redis>=6.0",
    "msgspec>=0.19.0",
    "fastapi>=0.128.6",
    "uvicorn[standard]>=0.40.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.0"
]
importer = [
    "redis>=6.0",
    "requests>=2.31",
    "sentry-sdk>=2.0"
]
rt_poller = [
    "redis>=6.0",
    "requests>=2.31",
    "protobuf>=6.31",
    "gtfs-realtime-bindings>=2.0",
    "msgspec>=0.19.0",
    "cachetools>=7.0.0",
    "sentry-sdk>=2.0"
]
stop_writer = [
    "redis>=6.0",
    "msgspec>=0.19.0",
    "cachetools>=7.0.0",
    "sentry-sdk>=2.0"
]
weather_collector = [
    "requests>=2.31",
    "sentry-sdk>=2.0"
]
migrator = [
    "alembic>=1.16"
]
all = [
    "redis>=6.0",
    "requests>=2.31",
    "protobuf>=6.31",
    "gtfs-realtime-bindings>=2.0",
    "alembic>=1.16",
    "msgspec>=0.19.0",
    "fastapi>=0.128.6",
    "uvicorn[standard]>=0.40.0",
    "cachetools>=7.0.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.0"
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.13",
    "mypy>=1.18",
    "pre-commit>=4.0",
    "types-requests>=2.32",
    "types-cachetools>=5.3.0.7"
]

[tool.ruff]
line-length = 120
target-version = "py313"

exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
    "tests"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["redis"]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["migrations", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[[tool.mypy.overrides]]
module = [
    "gtfs_realtime_bindings.*",
    "google.transit.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
